fix: dark mode table color

--- a/includes/admin/page-optimizer/src/index.css
+++ b/includes/admin/page-optimizer/src/index.css
@@ -56,7 +56,7 @@
     --card-foreground: 210 40% 98%;
  
     --border: 0 0% 12%;
-    --input: 217.2 32.6% 17.5%;
+    --input:0 0% 12%;
  
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
